# folder-organizer

./: .editorconfig  .gitignore  README.md  config.json  organize_folders.py  pyproject.toml  requirements.txt
.agent/rules/: python-best-practices.md
.agent/workflows/: test-and-verify.md
.github/workflows/: ci.yml
tests/: conftest.py  test_organizer.py
